--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,19 +42,25 @@ import TwitterIcon from "./Icons/Twitter";
       <div class="flex items-center gap-x-4">
         <a
           class="p-3 rounded-full hover:bg-slate-400/15 transition-all"
-          href=""
+          href="https://github.com/alexisdlr/"
+          target="_blank"
+          rel="noopener"
         >
           <GithubIcon className={"size-10 text-slate-700 dark:text-darkText"} />
         </a>
         <a
           class="p-3 rounded-full hover:bg-slate-400/15 transition-all"
-          href=""
+          href="https://linkedin.com/in/alexisdlrr/"
+          target="_blank"
+          rel="noopener"
         >
           <LinkedIn className={"size-10 text-slate-700 dark:text-darkText"} />
         </a>
         <a
           class="p-3 rounded-full hover:bg-slate-400/15 transition-all"
-          href=""
+          href="https://twitter.com/ALXS_DEV"
+          target="_blank"
+          rel="noopener"
         >
           <TwitterIcon className={"size-10 text-slate-700 dark:text-darkText"} />
         </a>
