--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,8 +44,8 @@ import ThemeToggle from "./ThemeToggle";
         </HeaderLink>
       </li>
     </ul>
-    <div class="flex items-center">
-      <ThemeToggle client:load />
+    <div class="p-1 flex items-center rounded-full bg-surface/10 dark:bg-iris/10">
+        <ThemeToggle client:load />
     </div>
   </nav>
 </header>
