--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import ThemeToggle from "./ThemeToggle";
       >
         <HeaderLink
           href="/"
-          class="font-semibold text-slate-700 dark:text-darkText"
+          class="font-semibold uppercase text-slate-700 dark:text-darkText"
           aria-label="Home"
         >
           Home
@@ -28,7 +28,7 @@ import ThemeToggle from "./ThemeToggle";
       >
         <HeaderLink
           href="/blog"
-          class="font-semibold text-slate-700 dark:text-darkText"
+          class="font-semibold uppercase text-slate-700 dark:text-darkText"
         >
           Blog
         </HeaderLink>
@@ -38,13 +38,13 @@ import ThemeToggle from "./ThemeToggle";
       >
         <HeaderLink
           href="/about"
-          class="font-semibold text-slate-700 dark:text-darkText"
+          class="font-semibold uppercase text-slate-700 dark:text-darkText"
         >
           About
         </HeaderLink>
       </li>
     </ul>
-    <div class="p-1 flex items-center rounded-full bg-surface/10 dark:bg-iris/10">
+    <div class="p-1 flex items-center rounded-full bg-navy/10 dark:bg-iris/10">
         <ThemeToggle client:load />
     </div>
   </nav>
