--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,62 +1,65 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Footer from "../components/Footer.astro";
+import Layout from "../layouts/Layout.astro";
+import Timeline from "../components/Timeline.astro";
+import BriefcaseIcon from "../components/Icons/Briefcase";
+import  CodeIcon from "../components/Icons/Code";
+type Props = CollectionEntry<"blog">["data"];
+const title = "About Me";
+const description = "About my experience and skills";
 ---
 
-<Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	heroImage="/blog-placeholder-about.jpg"
->
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
-	</p>
+<html lang="en">
+  <head>
+    <BaseHead title={title} description={description} />
+  </head>
 
-	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
-	</p>
-
-	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-	</p>
-
-	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
-	</p>
-
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
-	</p>
-</Layout>
+  <body>
+    <Layout>
+      <div class="flex flex-col gap-4">
+        <h1
+          class="font-black text-5xl lg:text-8xl my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
+        >
+          My name is <br class="hidden lg:block" /> Alexis
+        </h1>
+        <div class="flex items-center justify-center gap-16">
+          <p class="text-slate-700 dark:text-slate-100 mb-10 text-xl">
+            I'm a web development specialist with almost 3 years of experience.
+            Originally from Mexico, I love to create creative and functional
+            digital solutions. Always looking for new challenges to keep
+            learning and growing in the web development world.
+          </p>
+        </div>
+        <div class="flex flex-col gap-y-2">
+          <div class="flex gap-x-2 items-end">
+            <BriefcaseIcon className="size-10 text-slate-700 dark:text-darkText" />
+            <h2
+              class="font-black text-2xl lg:text-4xl text-slate-700 dark:text-darkText"
+            >
+              Experience
+            </h2>
+          </div>
+          <div class="px-6">
+            <Timeline />
+          </div>
+        </div>
+        <div class="flex flex-col gap-y-2">
+          <div class="flex gap-x-2 items-end">
+            <CodeIcon className="size-10 text-slate-700 dark:text-darkText" />
+            <h2
+              class="font-black text-2xl lg:text-4xl text-slate-700 dark:text-darkText"
+            >
+            Technologies & Languages
+            </h2>
+          </div>
+          <div class="px-6">
+            <Timeline />
+          </div>
+        </div>
+      </div>
+    </Layout>
+    <Footer />
+  </body>
+</html>
