--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import ThemeToggle from "./ThemeToggle";
   class="flex justify-center items-center mx-auto py-5 sticky top-0 w-full max-w-[22rem] xl:max-w-md z-10"
 >
   <nav
-    class="w-full rounded-full px-3 py-1 flex justify-between flex-row items-center dark:bg-surface/20 bg-slate-700/10 backdrop-blur-md shadow-muted ring-2 ring-iris/10 dark:shadow-iris/10 shadow-xl"
+    class="w-full rounded-full px-3 py-1 flex justify-between flex-row items-center dark:bg-surface/20 bg-slate-700/10 backdrop-blur-md shadow-muted ring-2 ring-iris/10 dark:shadow-astro-pink/10 shadow-xl"
   >
     <a href="/"><Logo class="size-10 rounded-full" /></a>
     <ul class="flex gap-x-4 text-black">
@@ -17,7 +17,7 @@ import ThemeToggle from "./ThemeToggle";
       >
         <HeaderLink
           href="/"
-          class="font-semibold uppercase text-slate-700 dark:text-darkText"
+          class="font-bold uppercase text-slate-700 dark:text-darkText"
           aria-label="Home"
         >
           Home
