--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,10 +8,10 @@ import TwitterIcon from "./Icons/Twitter";
 
 <div class="flex flex-col w-full">
   <h1
-    class="font-black text-5xl lg:text-8xl my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
+    class="font-black text-5xl [font-stretch:ultra-expanded] leading-none lg:text-8xl lg:pr-40 my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
     
   >
-    Creative <br class="hidden lg:block">Developer
+    Creative Developer
   </h1>
   <div
     class="grid grid-rows-auto sm:grid-cols-2 gap-x-2 items-end my-2 sm:mb-10 w-full justify-center"
