--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -19,7 +19,7 @@ const { title, description, pubDate, updatedDate, heroImage, minRead } = Astro.p
     <Layout>
       <article>
         <div class="px-24">
-          <div class="flex gap-x-3 items-center">
+          <div class="flex gap-x-3 items-center my-14">
             {
               heroImage && (
                 <img
@@ -52,6 +52,5 @@ const { title, description, pubDate, updatedDate, heroImage, minRead } = Astro.p
         </div>
       </article>
     </Layout>
-    <Footer />
   </body>
 </html>
