--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
@@ -18,6 +19,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
   <div class="pointer-events-none absolute z-10 inset-x-0 [height:100svh] flex items-center justify-center"> <div class="w-full h-24 bg-astro-blue/70 blur-[150px]"></div>
 </div>
 </div>
+
 <div
   class="fixed top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] dark:hidden"
 >
@@ -37,6 +39,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 <main class="w-full px-12 lg:px-0 lg:max-w-5xl mx-auto">
   <slot />
 </main>
+<Footer />
 
 <script is:inline>
   const theme = (() => {
