--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import Hero from '../components/Hero.astro';
 import LatestPosts from '../components/LatestPosts.astro';
 import Layout from '../layouts/Layout.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <!doctype html>
@@ -16,8 +17,8 @@ import Layout from '../layouts/Layout.astro';
 		<Layout>
 			<Hero />
 			<LatestPosts />
+			<Projects />
 		</Layout>
-		<Footer />
 	</body>
 </html>
 
