--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -2,9 +2,9 @@
   const {data} = Astro.props
 ---
 
-<div class="flex gap-x-2 items-center px-3 py-1 bg-navy/20 dark:bg-astro-blue/20 rounded-lg">
-  <span class="font-semibold text-sm dark:text-darkText/70">
-    {data.name}
+<div class="flex gap-x-1 items-center px-2 py-1 bg-navy/20 dark:bg-astro-blue/20 rounded-md">
+  <span class="font-semibold text-xs dark:text-darkText/70">
+    {data}
   </span>
   
 </div>
