--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,5 +1,6 @@
 ---
 import Badge from "./Badge.astro";
+import  CodeIcon from "./Icons/Code";
 
 const { project } = Astro.props;
 
@@ -10,29 +11,37 @@ interface TechnologyProps {
 ---
 
 <span
-  class="flex items-center bg-iris/5 ring-astro-blue/20 hover:bg-astro-blue/10 hover:ring-astro-blue text-text backdrop-blur-sm shadow-none ring-2 px-2 py-0 sm:gap-4 sm:p-5 hover:shadow-xl hover:shadow-astro-blue/50 rounded-lg transition-all ease-in-out duration-500 max-w-3xl"
+  class="flex items-center group bg-iris/5 ring-astro-blue/20 hover:bg-astro-blue/10 hover:ring-astro-blue text-text backdrop-blur-sm shadow-none ring-2 px-2 py-0 sm:gap-4 sm:p-5 hover:shadow-xl hover:shadow-astro-blue/50 rounded-lg transition-all ease-in-out duration-500 max-w-3xl"
 >
   <div class="flex flex-col items-center gap-2 w-full">
     <figure class="p-3 flex justify-center">
       <img src={project.img.src} alt="Wordle" class="max-w-[450px] z-100" />
     </figure>
     <div class="w-full px-3 ">
-      <h4
-        class="font-black text-left mt-1 text-4xl text-slate-700 dark:text-darkText"
+      <a
+        href={project.demo}
+        target="_blank"
+        class="font-black flex items-end gap-x-1 text-left mt-1 text-4xl text-slate-700 dark:text-darkText"
       >
         {project.name}
-      </h4>
+        <svg viewBox="0 0 24 24" stroke-width="3" fill="none" xmlns="http://www.w3.org/2000/svg" color="currentColor" name="Deploy" class="inline-block size-8 dark:text-darkText text-slate-700 transition-transform duration-300 group-hover:-translate-y-[1px] grou-hover:translate-x-[1px]"> <path d="M6 19L19 6m0 0v12.48M19 6H6.52" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path> </svg>
+      </a>
     </div>
     <div class="px-3">
       <p class="text-sm text-surface/80 dark:text-darkText">
         {project.desc}
       </p>
-      <div class="flex w-full mt-4 gap-x-4">
-        {
-          project.technologies.map((item: TechnologyProps) => (
-            <Badge data={item} />
-          ))
-        }
+      <div class="flex w-full items-center justify-between mt-4 gap-x-4">
+        <div class="flex gap-x-1">
+          {
+            project.technologies.map((item: TechnologyProps) => (
+              <Badge data={item} />
+            ))
+          }
+        </div>
+        <div>
+          <a href={project.code} target="_blank" class="flex items-center gap-x-1 px-2 py-1 rounded-full text-sm font-semibold text-slate-700 bg-slate-400/25 transition-all "><CodeIcon className="size-4" /><span>View code</span></a>
+        </div>
       </div>
     </div>
   </div>
