--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,4 +1,4 @@
-<ol class="relative my-10 border-s px-8 border-slate-200 dark:border-slate-800">                  
+<ol class="relative my-10 border-s-2 px-8 border-slate-200 dark:border-slate-800">                  
   <li class="mb-10 ms-4">
       <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
       <time class="mb-1 text-sm font-normal leading-none text-slate-700 dark:text-darkText">At present</time>
