--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -13,26 +13,26 @@ interface TechnologyProps {
 <span
   class="flex items-center group bg-iris/5 ring-astro-blue/20 hover:bg-astro-blue/10 hover:ring-astro-blue text-text backdrop-blur-sm shadow-none ring-2 px-2 py-0 sm:gap-4 sm:p-5 hover:shadow-xl hover:shadow-astro-blue/50 rounded-lg transition-all ease-in-out duration-500 max-w-3xl"
 >
-  <div class="flex flex-col items-center gap-2 w-full">
+  <div class="flex flex-col items-start gap-2 w-full">
     <figure class="p-3 flex justify-center">
-      <img src={project.img.src} alt="Wordle" class="max-w-[450px] z-100" />
+      <img src={project.img.src} alt="Wordle" class="w-full max-w-[450px]z-100" />
     </figure>
     <div class="w-full px-3 ">
       <a
         href={project.demo}
         target="_blank"
-        class="font-black flex items-end gap-x-1 text-left mt-1 text-4xl text-slate-700 dark:text-darkText"
+        class="font-black flex items-end gap-x-1 text-left mt-1 text-2xl lg:text-4xl text-slate-700 dark:text-darkText"
       >
         {project.name}
-        <svg viewBox="0 0 24 24" stroke-width="3" fill="none" xmlns="http://www.w3.org/2000/svg" color="currentColor" name="Deploy" class="inline-block size-8 dark:text-darkText text-slate-700 transition-transform duration-300 group-hover:-translate-y-[1px] grou-hover:translate-x-[1px]"> <path d="M6 19L19 6m0 0v12.48M19 6H6.52" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path> </svg>
+        <svg viewBox="0 0 24 24" stroke-width="3" fill="none" xmlns="http://www.w3.org/2000/svg" color="currentColor" name="Deploy" class="inline-block size-6 lg:size-8 dark:text-darkText text-slate-700 transition-transform duration-300 group-hover:-translate-y-[1px] grou-hover:translate-x-[1px]"> <path d="M6 19L19 6m0 0v12.48M19 6H6.52" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path> </svg>
       </a>
     </div>
-    <div class="px-3">
-      <p class="text-sm text-surface/80 dark:text-darkText">
+    <div class="px-3 w-full">
+      <p class="lg:text-sm text-left text-xs text-surface/80 dark:text-darkText">
         {project.desc}
       </p>
       <div class="flex w-full items-center justify-between mt-4 gap-x-4">
-        <div class="flex gap-x-1">
+        <div class="flex gap-x-1 gap-y-2 flex-wrap">
           {
             project.technologies.map((item: TechnologyProps) => (
               <Badge data={item} />
@@ -40,7 +40,7 @@ interface TechnologyProps {
           }
         </div>
         <div>
-          <a href={project.code} target="_blank" class="flex items-center gap-x-1 px-2 py-1 rounded-full text-sm font-semibold text-slate-700 bg-slate-400/25 transition-all "><CodeIcon className="size-4" /><span>View code</span></a>
+          <a href={project.code} target="_blank" class="flex items-center gap-x-1 px-2 py-1 rounded-full text-sm font-semibold text-slate-700 bg-slate-400/25 dark:text-darkText transition-all "><CodeIcon className="size-4" /><span>View code</span></a>
         </div>
       </div>
     </div>
