--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,10 +4,10 @@ import Project from "./Project.astro";
 
 ---
 <section class="mt-20">
-  <h1 class="font-black text-5xl lg:text-7xl my-4 text-slate-700 dark:text-darkText">
+  <h1 class="font-black lg:text-left text-4xl lg:text-7xl my-4 text-slate-700 dark:text-darkText">
     Selected Projects
   </h1>
-  <div class="grid grid-cols-2 gap-4">
+  <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
     {
       projects.map(post => (
         <Project project={post} />
