--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,38 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+
 
 html {
 	box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Manija del scrollbar */
+::-webkit-scrollbar-thumb {
+  background-color: rgba(51, 65, 85, 0.7); 
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(50 69 255 / 0.3); 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #718096;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background-color: #E0DEF4;
+}
+
+.dark ::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 23, 0.9); 
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background-color: #a0aec0; 
+}
+
 :root {
 	height: 100%;
 }
@@ -19,6 +45,7 @@ body {
 	padding: 0;
 	
 }
+
 main {
 	padding: 1rem;
 }
