--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,7 +44,7 @@ import ThemeToggle from "./ThemeToggle";
         </HeaderLink>
       </li>
     </ul>
-    <div class="p-1 flex items-center rounded-full bg-navy/10 dark:bg-iris/10">
+    <div class="p-1 flex items-center rounded-full ">
         <ThemeToggle client:load />
     </div>
   </nav>
