--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,12 +36,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 </div>
 
 <Header title={SITE_TITLE} />
-<main class="w-full px-12 lg:px-0 lg:max-w-5xl mx-auto">
+<main class="w-full px-12 lg:px-0 lg:max-w-5xl mx-auto transition">
   <slot />
 </main>
 <Footer />
 
 <script is:inline>
+  import { useThemeStore } from "../store/theme";
+  const { darkMode } = useThemeStore();
   const theme = (() => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
       return localStorage.getItem("theme");
@@ -52,7 +54,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     return "light";
   })();
 
-  if (theme === "light") {
+  if (!darkMode) {
     document.documentElement.classList.remove("dark");
   } else {
     document.documentElement.classList.add("dark");
