--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer
-  class="flex max-w-5xl justify-between items-center mx-auto "
+  class="flex flex-col md:flex-row max-w-5xl justify-between items-center mx-auto "
 >
   <p class="text-slate-700 dark:text-darkText">&copy; {today.getFullYear()} Alexis De Leon. All rights reserved.</p>
   <div
