--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,11 +7,17 @@ import ThemeToggle from "./ThemeToggle";
 <header
   class="flex justify-center items-center mx-auto py-5 sticky top-0 w-full max-w-[22rem] xl:max-w-md z-10"
 >
+  <nav class="flex md:hidden justify-between w-full px-2">
+    <a href="/"><Logo class="size-10 rounded-full" /></a>
+    <div class="p-1 flex items-center rounded-full ">
+        <ThemeToggle client:load />
+    </div>
+  </nav>
   <nav
-    class="w-full rounded-full px-3 py-1 flex justify-between flex-row items-center dark:bg-surface/20 bg-slate-700/10 backdrop-blur-md shadow-muted ring-2 ring-iris/10 dark:shadow-astro-pink/10 shadow-xl"
+    class="w-full rounded-full px-3 py-1 hidden md:flex justify-between flex-row items-center dark:bg-surface/20 bg-slate-700/10 backdrop-blur-md shadow-muted ring-2 ring-iris/10 dark:shadow-astro-pink/10 shadow-xl"
   >
     <a href="/"><Logo class="size-10 rounded-full" /></a>
-    <ul class="flex gap-x-4 text-black">
+    <ul class="flex gap-x-4 text-sm">
       <li
         class="bg-transparent hover:bg-navy/10 dark:hover:bg-iris/10 px-2 py-1 rounded-full transition-all ease-in-out duration-500"
       >
