--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,15 +28,15 @@ import TwitterIcon from "./Icons/Twitter";
       </figure>
     </div>
     <div
-      class="my-3 flex items-start flex-col md:flex-row lg:flex-col md:items-end justify-between lg:justify-center w-full font-mona-sans gap-3"
+      class="my-3 flex items-end flex-col md:flex-row lg:flex-col md:items-end justify-between lg:justify-center w-full font-mona-sans gap-3"
     >
-      <div class="flex flex-col gap-5 ">
+      <div class="flex flex-col gap-2 md:gap-5 ">
         <h2
-          class="text-5xl lg:text-8xl text-right font-black text-slate-700 dark:text-darkText"
+          class="text-4xl md:text-5xl lg:text-8xl text-right font-black text-slate-700 dark:text-darkText"
         >
           AlxsDev
         </h2>
-        <p class="text-navy/50 my-2 dark:text-darkText/50">
+        <p class="text-navy/50 my-2 text-right md:text-start dark:text-darkText/50">
           I ❤️ Web Development.
         </p>
       </div>
@@ -47,7 +47,7 @@ import TwitterIcon from "./Icons/Twitter";
           target="_blank"
           rel="noopener"
         >
-          <GithubIcon className={"size-10 text-slate-700 dark:text-darkText"} />
+          <GithubIcon className={"size-5 md:size-10 text-slate-700 dark:text-darkText"} />
         </a>
         <a
           class="p-3 rounded-full hover:bg-slate-400/15 transition-all"
@@ -55,7 +55,7 @@ import TwitterIcon from "./Icons/Twitter";
           target="_blank"
           rel="noopener"
         >
-          <LinkedIn className={"size-10 text-slate-700 dark:text-darkText"} />
+          <LinkedIn className={"size-5 md:size-10 text-slate-700 dark:text-darkText"} />
         </a>
         <a
           class="p-3 rounded-full hover:bg-slate-400/15 transition-all"
@@ -64,7 +64,7 @@ import TwitterIcon from "./Icons/Twitter";
           rel="noopener"
         >
           <TwitterIcon
-            className={"size-10 text-slate-700 dark:text-darkText"}
+            className={"size-5 md:size-10 text-slate-700 dark:text-darkText"}
           />
         </a>
       </div>
