added shadcn, nanostore, theme store

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,7 +4,9 @@
 // Supports weights 300-900
 // Supports weights 100-900
 // Supports weights 100-900
-import '../styles/global.css';
+import '@/styles/globals.css'
+
+
 interface Props {
 	title: string;
 	description: string;
