--- a/src/components/LatestPosts.astro
+++ b/src/components/LatestPosts.astro
@@ -22,7 +22,7 @@ const latestPostsToShow = latestPosts.slice(0, numLatestPostsToShow);
 
 ---
 <section class="my-20">
-  <h1 class="font-black text-5xl lg:text-7xl my-4 text-slate-700 dark:text-darkText">
+  <h1 class="font-black text-3xl sm:text-5xl lg:text-7xl my-4 text-slate-700 dark:text-darkText">
     Latest Posts
   </h1>
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
