--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,18 +1,27 @@
 ---
 import heroImg from "../images/hero-img.jpg";
+import alxs from "../images/alxs.jpg";
+import Logo from "../components/Logo.astro";
 import { Image } from "astro:assets";
 import LinkedIn from "./Icons/LinkedIn";
 import GithubIcon from "./Icons/Github";
-import TwitterIcon from "./Icons/Twitter";
 import { AnimatedBox } from "./animated/box";
+import { TwitterXIcon } from "./ui/icons";
 ---
 
 <AnimatedBox className="flex flex-col w-full" client:only="react">
-  <h1
-    class="font-black text-4xl md:text-5xl [font-stretch:ultra-expanded] leading-none lg:text-8xl lg:pr-40 my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
-  >
-    Creative Developer
-  </h1>
+  <div class="flex w-full items-center justify-between gap-5">
+    <h1
+      class="font-black text-4xl md:text-5xl [font-stretch:ultra-expanded] leading-none lg:text-8xl lg:pr-40 my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
+    >
+      Creative Developer
+    </h1>
+    <figure
+      class="max-w-[200px] md:max-w-[300px]"
+    >
+      <Logo class="rounded-full object-cover" />
+    </figure>
+  </div>
   <div
     class="grid grid-cols-1 sm:grid-cols-2 gap-x-2 items-end my-2 sm:mb-10 w-full justify-center"
   >
@@ -70,7 +79,7 @@ import { AnimatedBox } from "./animated/box";
           target="_blank"
           rel="noopener"
         >
-          <TwitterIcon
+          <TwitterXIcon
             className={"size-5 md:size-10 text-slate-700 dark:text-darkText"}
           />
         </a>
