--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,58 +3,17 @@ import HeaderLink from "./HeaderLink.astro";
 import Logo from "./Logo.astro";
 import ThemeToggle from "./ThemeToggle";
 import { AnimatedHeader } from "./animated/header";
+import BreadcrumbDynamic from "./BreadCrumbDynamic";
 ---
 
 <AnimatedHeader
   client:only="react"
-  className="flex justify-center items-center mx-auto py-5 sticky top-0 w-full max-w-[22rem] xl:max-w-md z-10 "
+  className="flex justify-center items-center mx-auto py-5 sticky top-0 w-full max-w-5xl z-10 "
 >
   <nav
-    class="w-full rounded-xl px-2 sm:px-3 py-1 flex justify-between flex-row items-center dark:bg-surface/20 bg-slate-700/10 backdrop-blur-md shadow-muted ring-2 ring-iris/10 dark:shadow-astro-pink/10 shadow-xl"
+    class="w-full px-2 sm:px-3 py-1 flex justify-between flex-row items-center backdrop-blur-md"
   >
-    <ul class="flex gap-x-2 sm:gap-x-4 text-xs sm:text-sm">
-      <li
-        class="bg-transparent hover:bg-navy/10 dark:hover:bg-iris/10 px-2 py-1 rounded-full transition-all ease-in-out duration-500"
-      >
-        <HeaderLink
-          href="/"
-          class="font-bold uppercase text-slate-700 dark:text-darkText"
-          aria-label="Home"
-        >
-          Home
-        </HeaderLink>
-      </li>
-      <li
-        class="bg-transparent hover:bg-navy/10 dark:hover:bg-iris/10 px-2 py-1 rounded-full transition-all ease-in-out duration-500"
-      >
-        <HeaderLink
-          href="/blog"
-          class="font-semibold uppercase text-slate-700 dark:text-darkText"
-        >
-          Blog
-        </HeaderLink>
-      </li>
-      <li
-      class="bg-transparent hover:bg-navy/10 dark:hover:bg-iris/10 px-2 py-1 rounded-full transition-all ease-in-out duration-500"
-    >
-      <HeaderLink
-        href="/about"
-        class="font-semibold uppercase text-slate-700 dark:text-darkText"
-      >
-        Projects
-      </HeaderLink>
-    </li>
-      <li
-        class="bg-transparent hover:bg-navy/10 dark:hover:bg-iris/10 px-2 py-1 rounded-full transition-all ease-in-out duration-500"
-      >
-        <HeaderLink
-          href="/about"
-          class="font-semibold uppercase text-slate-700 dark:text-darkText"
-        >
-          Who I am
-        </HeaderLink>
-      </li>
-    </ul>
+    <BreadcrumbDynamic client:load />
     <div class="p-1 flex items-center rounded-full">
       <ThemeToggle client:load />
     </div>
