--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import { TwitterXIcon } from "./ui/icons";
 ---
 
 <AnimatedBox className="flex flex-col w-full" client:only="react">
-  <div class="flex w-full items-center justify-between gap-5">
+  <div class="flex w-full items-center justify-around gap-5">
     <h1
       class="font-black text-4xl md:text-5xl [font-stretch:ultra-expanded] leading-none lg:text-8xl lg:pr-40 my-4 text-transparent bg-clip-text bg-gradient-to-r from-slate-700 to-navy dark:text-darkText"
     >
